# chatr-server

./: Cargo.toml
migrations/: 20230620212734_inital-tables.sql
sql/: messages_table.sql  rooms_table.sql  users_table.sql
src/: main.rs  persist_message.rs  rooms.rs
