[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
message = {version = "0.1.0", path = "/home/ryan/Documents/projects/chatr/message/"}
